--- a/o-2/index.html
+++ b/o-2/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width', initial-scale='1.0'>
+    <meta name='viewport' content='width=device-width' , initial-scale='1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <title>Document</title>
+    <title>Oppgave 2</title>
     <link rel='stylesheet' href='index.css'>
 </head>
+
 <body>
+    <h1>Oppgave 2</h1>
+    <h3>Minibanken</h3>
+    <h3> Lag et input-felt hvor du kan skrive inn et beløp. Legg inn en knapp også. Når du trykker på knappen skal
+        beløpet tas ut av konto. Etter at du har satt inn beløpet, skal du vise frem saldoen.</h3>
+
+    <div id="oppgavesvar">
+        <h1>Minibanken</h1>
+        <section id="inputs">
+            <input id="inpAmount" type="number" placeholder="Antall kroner">
+
+            <button id="btnWit">Ta ut penger</button>
+            <button id="btnDep">Sett inn penger</button>
+        </section>
+        <p id="txtSvar">Du har nå kroner 500 på kontoen</p>
+
+    </div>
+    </div>
+
+
     <script src='index.js'></script>
 </body>
+
 </html>
