--- a/o-1/index.html
+++ b/o-1/index.html
@@ -10,25 +10,27 @@
 </head>
 
 <body>
-    <h1>Oppgave 1</h1>
-    <p>Du skal skrive kode for en nettside hvor man skal registrere passord. For å være sikker på at de skriver riktig,
-        må de skrive inn passordet to ganger. Du har fått i oppdrag å sjekke </p>
-    <ul>
-        <li>om passordene er like</li>
-        <li>om begge passordene er fylt inn</li>
-    </ul>
+    <main>
+        <h1>Oppgave 1</h1>
+        <div id="oppgaver">
+            <h3>Du skal skrive kode for en nettside hvor man skal registrere passord. For å være sikker på at de skriver
+                riktig,
+                må de skrive inn passordet to ganger. Du har fått i oppdrag å sjekke om 1. passordene er like og 2.
+                begge passordene er fylt inn </h3>
 
-    <div id="oppgavesvar">
-        <h1>Velg passord</h1>
-        <section id="inputs">
-            <input id="inpPassword" type="text" placeholder="Skriv inn passord">
-            <input id="inpRepeat" type="text" placeholder="Gjenta passord">
-        </section>
+            <div id="oppgavesvar">
+                <h1>Velg passord</h1>
+                <section id="inputs">
+                    <input id="inpPassword" type="text" placeholder="Skriv inn passord">
+                    <input id="inpRepeat" type="text" placeholder="Gjenta passord">
+                </section>
 
-        <p id="txtSvar">Fyll inn to like passord</p>
+                <p id="txtSvar">Fyll inn to like passord</p>
+            </div>
 
-    </div>
-    <script src='index.js'></script>
+            <script src='index.js'></script>
+        </div>
+    </main>
 </body>
 
 </html>
