--- a/o-2/index.html
+++ b/o-2/index.html
@@ -10,25 +10,28 @@
 </head>
 
 <body>
-    <h1>Oppgave 2</h1>
-    <h3>Minibanken</h3>
-    <h3> Lag et input-felt hvor du kan skrive inn et beløp. Legg inn en knapp også. Når du trykker på knappen skal
-        beløpet tas ut av konto. Etter at du har satt inn beløpet, skal du vise frem saldoen.</h3>
+    <main>
+        <h1>Oppgave 2</h1>
+        <div id="oppgaver">
+            <h3>Minibanken</h3>
+            <h3> Lag et input-felt hvor du kan skrive inn et beløp. Legg inn en knapp også. Når du trykker på knappen
+                skal
+                beløpet tas ut av konto. Etter at du har satt inn beløpet, skal du vise frem saldoen.</h3>
 
-    <div id="oppgavesvar">
-        <h1>Minibanken</h1>
-        <section id="inputs">
-            <input id="inpAmount" type="number" placeholder="Antall kroner">
+            <div id="oppgavesvar">
+                <h1>Minibanken</h1>
+                <section id="inputs">
+                    <input id="inpAmount" type="number" placeholder="Antall kroner">
 
-            <button id="btnWit">Ta ut penger</button>
-            <button id="btnDep">Sett inn penger</button>
-        </section>
-        <p id="txtSvar">Du har nå kroner 500 på kontoen</p>
+                    <button id="btnWit">Ta ut penger</button>
+                    <button id="btnDep">Sett inn penger</button>
+                </section>
+                <p id="txtSvar">Du har nå kroner 500 på kontoen</p>
 
-    </div>
-
-
-    <script src='index.js'></script>
+            </div>
+            <script src='index.js'></script>
+        </div>
+    </main>
 </body>
 
 </html>
