--- a/o-3/index.html
+++ b/o-3/index.html
@@ -10,24 +10,29 @@
 </head>
 
 <body>
-    <h1>Oppgave 3</h1>
-    <h4>Bruk teknikken som du lærte om å sette farge på nettsiden med knapper, men la de forskjellige knappene spille av
-        forskjellige lyder.</h4>
+    <main>
+        <h1>Oppgave 3</h1>
+        <div id="oppgaver">
+            <h4>Bruk teknikken som du lærte om å sette farge på nettsiden med knapper, men la de forskjellige knappene
+                spille av
+                forskjellige lyder.</h4>
 
-    <section id="oppgavesvar">
+            <section id="oppgavesvar">
 
-            <audio src="./audio/bassoon.mp3" id="bassoon"></audio>
-            <audio src="./audio/flute.mp3" id="flute"></audio>
-            <audio src="./audio/clarinet.mp3" id="clarinet"></audio>
- 
+                <audio src="./audio/bassoon.mp3" id="bassoon"></audio>
+                <audio src="./audio/flute.mp3" id="flute"></audio>
+                <audio src="./audio/clarinet.mp3" id="clarinet"></audio>
 
-            <button id="btnB" data-sound="bassoon">Bassoon</button>
-            <button id="btnF" data-sound="flute">Flute</button>
-            <button id="btnC" data-sound="clarinet">Clarinet</button>
 
-    </section>
+                <button id="btnB" data-sound="bassoon">Bassoon</button>
+                <button id="btnF" data-sound="flute">Flute</button>
+                <button id="btnC" data-sound="clarinet">Clarinet</button>
 
-    <script src='index.js'></script>
+            </section>
+
+            <script src='index.js'></script>
+        </div>
+    </main>
 </body>
 
 </html>
